--- a/tf-nn.ipynb
+++ b/tf-nn.ipynb
@@ -239,53 +239,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n",
-      "1875/1875 [==============================] - 7s 3ms/step - loss: 0.1136\n",
-      "Epoch 2/10\n",
-      "1875/1875 [==============================] - 7s 4ms/step - loss: 0.1061\n",
-      "Epoch 3/10\n",
-      "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0947\n",
-      "Epoch 4/10\n",
-      "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0985\n",
-      "Epoch 5/10\n",
-      "1875/1875 [==============================] - 6s 3ms/step - loss: 0.0870\n",
-      "Epoch 6/10\n",
-      "1875/1875 [==============================] - 6s 3ms/step - loss: 0.0817\n",
-      "Epoch 7/10\n",
-      "1875/1875 [==============================] - 6s 3ms/step - loss: 0.0894\n",
-      "Epoch 8/10\n",
-      "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0841\n",
-      "Epoch 9/10\n",
-      "1875/1875 [==============================] - 6s 3ms/step - loss: 0.0896\n",
-      "Epoch 10/10\n",
-      "1875/1875 [==============================] - 7s 4ms/step - loss: 0.0790\n"
+      "Epoch 1/15\n",
+      "968/968 [==============================] - 5s 4ms/step - loss: 0.0431\n",
+      "Epoch 2/15\n",
+      "740/968 [=====================>........] - ETA: 0s - loss: 0.0414"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.src.callbacks.History at 0x1c18e1610c0>"
-      ]
-     },
-     "execution_count": 96,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.fit(X_train, y_train, epochs=10, batch_size=32)"
+    "model.fit(X_train, y_train, epochs=15, batch_size=62)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -302,24 +276,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred_labels = np.argmax(pred_prob, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test accuracy: 0.9728\n"
+     ]
+    }
+   ],
+   "source": [
+    "accuracy = np.mean(np.where(pred_labels==y_test, 1, 0))\n",
+    "print(f'Test accuracy: {accuracy}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9"
+       "1"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "pred_labels = np.argmax(pred_prob, axis=1)\n",
-    "pred_labels.shape"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
