--- a/tf-nn.ipynb
+++ b/tf-nn.ipynb
@@ -249,8 +249,44 @@
       "Epoch 1/15\n",
       "968/968 [==============================] - 5s 4ms/step - loss: 0.0431\n",
       "Epoch 2/15\n",
-      "740/968 [=====================>........] - ETA: 0s - loss: 0.0414"
+      "968/968 [==============================] - 4s 4ms/step - loss: 0.0424\n",
+      "Epoch 3/15\n",
+      "968/968 [==============================] - 4s 4ms/step - loss: 0.0409\n",
+      "Epoch 4/15\n",
+      "968/968 [==============================] - 4s 4ms/step - loss: 0.0390\n",
+      "Epoch 5/15\n",
+      "968/968 [==============================] - 3s 4ms/step - loss: 0.0485\n",
+      "Epoch 6/15\n",
+      "968/968 [==============================] - 4s 4ms/step - loss: 0.0348\n",
+      "Epoch 7/15\n",
+      "968/968 [==============================] - 4s 4ms/step - loss: 0.0345\n",
+      "Epoch 8/15\n",
+      "968/968 [==============================] - 3s 3ms/step - loss: 0.0483\n",
+      "Epoch 9/15\n",
+      "968/968 [==============================] - 4s 4ms/step - loss: 0.0433\n",
+      "Epoch 10/15\n",
+      "968/968 [==============================] - 4s 4ms/step - loss: 0.0460\n",
+      "Epoch 11/15\n",
+      "968/968 [==============================] - 4s 4ms/step - loss: 0.0457\n",
+      "Epoch 12/15\n",
+      "968/968 [==============================] - 4s 4ms/step - loss: 0.0329\n",
+      "Epoch 13/15\n",
+      "968/968 [==============================] - 4s 4ms/step - loss: 0.0333\n",
+      "Epoch 14/15\n",
+      "968/968 [==============================] - 3s 4ms/step - loss: 0.0403\n",
+      "Epoch 15/15\n",
+      "968/968 [==============================] - 3s 4ms/step - loss: 0.0457\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.History at 0x1c1cb46ad70>"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -259,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,14 +321,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test accuracy: 0.9728\n"
+      "Test accuracy: 0.9758\n"
      ]
     }
    ],
@@ -300,24 +336,6 @@
     "accuracy = np.mean(np.where(pred_labels==y_test, 1, 0))\n",
     "print(f'Test accuracy: {accuracy}')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 114,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
