--- a/scratch-nn.ipynb
+++ b/scratch-nn.ipynb
@@ -355,13 +355,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_data = train_data/255\n",
-    "test_data = test_data/255\n"
+    "test_data = test_data/255"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def softmax(z):\n",
+    "    temp = np.sum(np.exp(z)) \n",
+    "    return np.exp(z) / temp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Dense:\n",
+    "    def __init__(self, units, a_in):\n",
+    "        self.units = units \n",
+    "        self.a_in = a_in\n",
+    "        self.w = np\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
