--- a/scratch-nn.ipynb
+++ b/scratch-nn.ipynb
@@ -384,7 +384,8 @@
     "    def __init__(self, units, a_in):\n",
     "        self.units = units \n",
     "        self.a_in = a_in\n",
-    "        self.w = np\n",
+    "        self.w = np.zeros(shape=(a_in.shape[1], units))\n",
+    "        # self.b\n",
     "        "
    ]
   },
