--- a/scratch-nn.ipynb
+++ b/scratch-nn.ipynb
@@ -365,13 +365,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def softmax(z):\n",
-    "    temp = np.sum(np.exp(z)) \n",
-    "    return np.exp(z) / temp"
+    "class Activation:\n",
+    "    def softmax(self, z):\n",
+    "        temp = np.sum(np.exp(z)) \n",
+    "        return np.exp(z) / temp\n",
+    "    \n",
+    "    def relu(self, z):\n",
+    "        return np.maximum(0, z)\n",
+    "    \n",
+    "    def use(self, string):\n",
+    "        if(string == 'softmax'):\n",
+    "            return self.softmax\n",
+    "        elif(string == 'relu'):\n",
+    "            return self.relu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.00490169 0.26762315 0.72747516]\n"
+     ]
+    }
+   ],
+   "source": [
+    "activation = Activation().use('softmax')\n",
+    "print(activation(np.array([-1,3,4])))"
    ]
   },
   {
