--- a/scratch-nn.ipynb
+++ b/scratch-nn.ipynb
@@ -404,25 +404,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Dense:\n",
+    "class DenseLayer:\n",
     "    def __init__(self, units, a_in):\n",
     "        self.units = units \n",
     "        self.a_in = a_in\n",
-    "        self.w = np.zeros(shape=(a_in.shape[1], units))\n",
-    "        # self.b\n",
+    "        self.w = np.zeros(shape=(len(a_in), units)) #!needs modification\n",
+    "        self.b = np.zeros(units)\n",
+    "    def __str__(self):\n",
+    "        return f'''\n",
+    "        Number of units: {self.units}\n",
+    "        Input shape(a_in.shape): {self.a_in.shape}\n",
+    "        weight has shape(w.shape): {self.w.shape}\n",
+    "        bias has shape(b.shape): {self.b.shape}\n",
+    "        '''\n",
+    "\n",
+    "\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "        Number of units: 2\n",
+      "        Input shape(a_in.shape): (2,)\n",
+      "        weight has shape(w.shape): (2, 2)\n",
+      "        bias has shape(b.shape): (2,)\n",
+      "        \n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.array([200, 17])\n",
+    "layer = DenseLayer(2, x)\n",
+    "print(layer)"
+   ]
   },
   {
    "cell_type": "code",
@@ -431,20 +457,8 @@
    "outputs": [],
    "source": [
     "# x = np.array([200, 17])\n",
-    "# W = np.array([[1, -3, 5],\n",
-    "#               [-2, 4, -6]])\n",
-    "# b = np.array([-1, 1, 2])\n",
-    "# g = lambda z : 1/(1+np.exp(-z))\n",
-    "# def dense(a_in, W, b):\n",
-    "#     units = W.shape[1]\n",
-    "#     a_out = np.zeros(units)\n",
-    "#     for j in range(units):\n",
-    "#         w = W[:, j]\n",
-    "#         z = np.dot(w, a_in) + b[j]\n",
-    "#         a_out[j] = g(z)\n",
-    "#     return a_out\n",
     "# def dense2(a_in, W, b):\n",
-    "#     return g(a_in@W + b)\n"
+    "#     return g(a_in@W + b)"
    ]
   }
  ],
