--- a/scratch-nn.ipynb
+++ b/scratch-nn.ipynb
@@ -404,16 +404,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
     "class DenseLayer:\n",
-    "    def __init__(self, units, a_in):\n",
+    "    def __init__(self, units, a_in, activation=None):\n",
     "        self.units = units \n",
     "        self.a_in = a_in\n",
+    "        self.activation = activation\n",
     "        self.w = np.zeros(shape=(len(a_in), units)) #!needs modification\n",
     "        self.b = np.zeros(units)\n",
+    "\n",
     "    def __str__(self):\n",
     "        return f'''\n",
     "        Number of units: {self.units}\n",
@@ -422,13 +424,16 @@
     "        bias has shape(b.shape): {self.b.shape}\n",
     "        '''\n",
     "\n",
+    "    def output(self):\n",
+    "        if(self.activation == None): return self.a_in@self.w + self.b\n",
+    "        return self.activation(self.a_in@self.w + self.b)\n",
     "\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -440,14 +445,16 @@
       "        Input shape(a_in.shape): (2,)\n",
       "        weight has shape(w.shape): (2, 2)\n",
       "        bias has shape(b.shape): (2,)\n",
-      "        \n"
+      "        \n",
+      "[0. 0.]\n"
      ]
     }
    ],
    "source": [
     "x = np.array([200, 17])\n",
     "layer = DenseLayer(2, x)\n",
-    "print(layer)"
+    "print(layer)\n",
+    "print(layer.output())"
    ]
   },
   {
@@ -455,11 +462,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# x = np.array([200, 17])\n",
-    "# def dense2(a_in, W, b):\n",
-    "#     return g(a_in@W + b)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
