made changes to the activation

--- a/scratch-nn.ipynb
+++ b/scratch-nn.ipynb
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,16 +377,25 @@
     "    def relu(self, z):\n",
     "        return np.maximum(0, z)\n",
     "    \n",
+    "    def sigmoid(self, z):\n",
+    "        return 1/(1 + np.exp(-z))\n",
+    "    \n",
     "    def use(self, string):\n",
-    "        if(string == 'softmax'):\n",
-    "            return self.softmax\n",
-    "        elif(string == 'relu'):\n",
-    "            return self.relu"
+    "        match string:\n",
+    "            case 'relu':\n",
+    "                return self.relu\n",
+    "            case 'sigmoid':\n",
+    "                return self.sigmoid\n",
+    "            case 'softmax':\n",
+    "                return self.softmax\n",
+    "            case default:\n",
+    "                return z\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -456,6 +465,21 @@
     "print(layer)\n",
     "print(layer.output())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0.]\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
