--- a/scratch-nn.ipynb
+++ b/scratch-nn.ipynb
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,6 +376,9 @@
     "    \n",
     "    def relu(self, z):\n",
     "        return np.maximum(0, z)\n",
+    "\n",
+    "    def tanh(self, z):\n",
+    "        return np.tanh(z)\n",
     "    \n",
     "    def sigmoid(self, z):\n",
     "        return 1/(1 + np.exp(-z))\n",
@@ -388,14 +391,16 @@
     "                return self.sigmoid\n",
     "            case 'softmax':\n",
     "                return self.softmax\n",
+    "            case 'tanh':\n",
+    "                return self.tanh\n",
     "            case default:\n",
-    "                return z\n",
+    "                return 'Please specify the activation'\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +484,28 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "class LossFunctions:\n",
+    "    \n",
+    "    def mean_squared_error(y_true, y_pred):\n",
+    "        mse = np.mean((y_true-y_pred)**2)\n",
+    "        return mse\n",
+    "    \n",
+    "    def binary_cross_entropy(y_true, y_pred):\n",
+    "        epsilon = 1e-15\n",
+    "        y_pred = np.clip(y_pred, epsilon, 1 - epsilon)\n",
+    "        return - (y_true * np.log(y_pred) + (1 - y_true) * np.log(1 - y_pred))\n",
+    "    \n",
+    "    def softmax_cross_entropy(y_true, y_pred):\n",
+    "        y_true_one_hot = np.zeros_like(y_pred)\n",
+    "        y_true_one_hot[np.arange(len(y_true)), y_true] = 1\n",
+    "\n",
+    "        epsilon = 1e-15\n",
+    "        y_pred = np.clip(y_pred, epsilon, 1 - epsilon)\n",
+    "        \n",
+    "        ce = -np.sum(y_true_one_hot * np.log(y_pred), axis=1)\n",
+    "        return ce\n"
+   ]
   },
   {
    "cell_type": "code",
