added the network class

--- a/scratch-nn.ipynb
+++ b/scratch-nn.ipynb
@@ -509,6 +509,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NeuralNetwork:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.layers = []\n",
+    "\n",
+    "    def add_layer(self, units, a_in, activation=None):\n",
+    "        self.layers.append(DenseLayer(units, a_in, activation))\n",
+    "    \n",
+    "    def forward_propagation(self, X):\n",
+    "        a = X\n",
+    "        for layer in self.layers:\n",
+    "            a = layer.output(a)\n",
+    "        return a\n",
+    "    \n",
+    "    def backward_propagation(self, X, y_true, learning_rate):\n",
+    "        m = X.shape[0]\n",
+    "        a = X\n",
+    "        for layer in self.layers:\n",
+    "            a_prev = a\n",
+    "            a = layer.output(a_prev)\n",
+    "        \n",
+    "        dA = None  # Gradient of the cost with respect to the activation of the last layer\n",
+    "        for i in reversed(range(len(self.layers))):\n",
+    "            layer = self.layers[i]\n",
+    "            if layer.activation is None:\n",
+    "                dZ = dA\n",
+    "            else:\n",
+    "                dZ = dA * layer.activation(a, derivative=True)\n",
+    "            \n",
+    "            dW = 1 / m * a_prev.T @ dZ\n",
+    "            db = 1 / m * np.sum(dZ, axis=0)\n",
+    "            dA_prev = dZ @ layer.w.T\n",
+    "            \n",
+    "            layer.w -= learning_rate * dW\n",
+    "            layer.b -= learning_rate * db\n",
+    "            \n",
+    "            dA = dA_prev\n",
+    "    \n",
+    "    def train(self, X, y_true, learning_rate, epochs):\n",
+    "        for epoch in range(epochs):\n",
+    "            y_pred = self.forward_propagation(X)\n",
+    "            loss = LossFunctions.softmax_cross_entropy(y_true, y_pred)\n",
+    "            self.backward_propagation(X, y_true, learning_rate)\n",
+    "            if epoch % 100 == 0:\n",
+    "                print(f\"Epoch {epoch}: Loss = {loss}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "neural_network = NeuralNetwork()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
