made changes to the network class

--- a/scratch-nn.ipynb
+++ b/scratch-nn.ipynb
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,27 +427,27 @@
     "        self.units = units \n",
     "        self.a_in = a_in\n",
     "        self.activation = activation\n",
-    "        self.w = np.zeros(shape=(len(a_in), units)) #!needs modification\n",
+    "        self.w = np.zeros(shape=(a_in[1], units)) #!needs modification\n",
     "        self.b = np.zeros(units)\n",
     "\n",
     "    def __str__(self):\n",
     "        return f'''\n",
     "        Number of units: {self.units}\n",
-    "        Input shape(a_in.shape): {self.a_in.shape}\n",
+    "        Input shape(shape): {self.a_in}\n",
     "        weight has shape(w.shape): {self.w.shape}\n",
     "        bias has shape(b.shape): {self.b.shape}\n",
     "        '''\n",
     "\n",
-    "    def output(self):\n",
-    "        if(self.activation == None): return self.a_in@self.w + self.b\n",
-    "        return self.activation(self.a_in@self.w + self.b)\n",
+    "    def output(self, a_in):\n",
+    "        if(self.activation == None): return a_in@self.w + self.b\n",
+    "        return self.activation(a_in@self.w + self.b)\n",
     "\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -456,34 +456,26 @@
      "text": [
       "\n",
       "        Number of units: 2\n",
-      "        Input shape(a_in.shape): (2,)\n",
+      "        Input shape(shape): (None, 2)\n",
       "        weight has shape(w.shape): (2, 2)\n",
       "        bias has shape(b.shape): (2,)\n",
       "        \n",
-      "[0. 0.]\n"
+      "[0.5 0.5]\n"
      ]
     }
    ],
    "source": [
     "x = np.array([200, 17])\n",
-    "layer = DenseLayer(2, x)\n",
+    "layer = DenseLayer(2, (None, 2), activation)\n",
     "print(layer)\n",
-    "print(layer.output())"
+    "print(layer.output(x))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 90,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0. 0.]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class LossFunctions:\n",
     "    \n",
@@ -509,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +516,8 @@
     "    def forward_propagation(self, X):\n",
     "        a = X\n",
     "        for layer in self.layers:\n",
-    "            a = layer.output(a)\n",
+    "            layer.receive_input(a)\n",
+    "            a = layer.output()\n",
     "        return a\n",
     "    \n",
     "    def backward_propagation(self, X, y_true, learning_rate):\n",
@@ -562,11 +555,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
     "neural_network = NeuralNetwork()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "neural_network.add_layer(units=64, a_in=(None, 784), activation='relu')\n",
+    "neural_network.add_layer(units=10, a_in=(None, 64), activation='relu')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 2 is different from 784)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[95], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m neural_network\u001b[39m.\u001b[39;49mtrain(train_data, train_labels, learning_rate\u001b[39m=\u001b[39;49m\u001b[39m0.01\u001b[39;49m, epochs\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m)\n",
+      "Cell \u001b[1;32mIn[92], line 42\u001b[0m, in \u001b[0;36mNeuralNetwork.train\u001b[1;34m(self, X, y_true, learning_rate, epochs)\u001b[0m\n\u001b[0;32m     40\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mtrain\u001b[39m(\u001b[39mself\u001b[39m, X, y_true, learning_rate, epochs):\n\u001b[0;32m     41\u001b[0m     \u001b[39mfor\u001b[39;00m epoch \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(epochs):\n\u001b[1;32m---> 42\u001b[0m         y_pred \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mforward_propagation(X)\n\u001b[0;32m     43\u001b[0m         loss \u001b[39m=\u001b[39m LossFunctions\u001b[39m.\u001b[39msoftmax_cross_entropy(y_true, y_pred)\n\u001b[0;32m     44\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbackward_propagation(X, y_true, learning_rate)\n",
+      "Cell \u001b[1;32mIn[92], line 13\u001b[0m, in \u001b[0;36mNeuralNetwork.forward_propagation\u001b[1;34m(self, X)\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[39mfor\u001b[39;00m layer \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlayers:\n\u001b[0;32m     12\u001b[0m     layer\u001b[39m.\u001b[39mreceive_input(a)\n\u001b[1;32m---> 13\u001b[0m     a \u001b[39m=\u001b[39m layer\u001b[39m.\u001b[39;49moutput()\n\u001b[0;32m     14\u001b[0m \u001b[39mreturn\u001b[39;00m a\n",
+      "Cell \u001b[1;32mIn[88], line 21\u001b[0m, in \u001b[0;36mDenseLayer.output\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39moutput\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[0;32m     20\u001b[0m     \u001b[39mif\u001b[39;00m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mactivation \u001b[39m==\u001b[39m \u001b[39mNone\u001b[39;00m): \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39ma_in\u001b[39m@self\u001b[39m\u001b[39m.\u001b[39mw \u001b[39m+\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mb\n\u001b[1;32m---> 21\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mactivation(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49ma_in\u001b[39m@self\u001b[39;49m\u001b[39m.\u001b[39;49mw \u001b[39m+\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mb)\n",
+      "\u001b[1;31mValueError\u001b[0m: matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 2 is different from 784)"
+     ]
+    }
+   ],
+   "source": [
+    "neural_network.train(train_data, train_labels, learning_rate=0.01, epochs=1)"
    ]
   },
   {
