made changes to the readme and the network class

--- a/scratch-nn.ipynb
+++ b/scratch-nn.ipynb
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,8 +516,8 @@
     "    def forward_propagation(self, X):\n",
     "        a = X\n",
     "        for layer in self.layers:\n",
-    "            layer.receive_input(a)\n",
-    "            a = layer.output()\n",
+    "            # layer.receive_input(a)\n",
+    "            a = layer.output(a)\n",
     "        return a\n",
     "    \n",
     "    def backward_propagation(self, X, y_true, learning_rate):\n",
@@ -527,13 +527,13 @@
     "            a_prev = a\n",
     "            a = layer.output(a_prev)\n",
     "        \n",
-    "        dA = None  # Gradient of the cost with respect to the activation of the last layer\n",
+    "        dA = LossFunctions.softmax_cross_entropy(y_true, a) # Gradient of the cost with respect to the activation of the last layer\n",
     "        for i in reversed(range(len(self.layers))):\n",
     "            layer = self.layers[i]\n",
     "            if layer.activation is None:\n",
     "                dZ = dA\n",
     "            else:\n",
-    "                dZ = dA * layer.activation(a, derivative=True)\n",
+    "                dZ = dA * layer.activation(a)\n",
     "            \n",
     "            dW = 1 / m * a_prev.T @ dZ\n",
     "            db = 1 / m * np.sum(dZ, axis=0)\n",
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,31 +564,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
-    "neural_network.add_layer(units=64, a_in=(None, 784), activation='relu')\n",
-    "neural_network.add_layer(units=10, a_in=(None, 64), activation='relu')"
+    "softmax = Activation().use('softmax')\n",
+    "relu = Activation().use('relu')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "neural_network.add_layer(units=64, a_in=(None, 784), activation=relu)\n",
+    "neural_network.add_layer(units=10, a_in=(None, 64), activation=softmax)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 2 is different from 784)",
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for *: 'NoneType' and 'float'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[95], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m neural_network\u001b[39m.\u001b[39;49mtrain(train_data, train_labels, learning_rate\u001b[39m=\u001b[39;49m\u001b[39m0.01\u001b[39;49m, epochs\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m)\n",
-      "Cell \u001b[1;32mIn[92], line 42\u001b[0m, in \u001b[0;36mNeuralNetwork.train\u001b[1;34m(self, X, y_true, learning_rate, epochs)\u001b[0m\n\u001b[0;32m     40\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mtrain\u001b[39m(\u001b[39mself\u001b[39m, X, y_true, learning_rate, epochs):\n\u001b[0;32m     41\u001b[0m     \u001b[39mfor\u001b[39;00m epoch \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(epochs):\n\u001b[1;32m---> 42\u001b[0m         y_pred \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mforward_propagation(X)\n\u001b[0;32m     43\u001b[0m         loss \u001b[39m=\u001b[39m LossFunctions\u001b[39m.\u001b[39msoftmax_cross_entropy(y_true, y_pred)\n\u001b[0;32m     44\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbackward_propagation(X, y_true, learning_rate)\n",
-      "Cell \u001b[1;32mIn[92], line 13\u001b[0m, in \u001b[0;36mNeuralNetwork.forward_propagation\u001b[1;34m(self, X)\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[39mfor\u001b[39;00m layer \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlayers:\n\u001b[0;32m     12\u001b[0m     layer\u001b[39m.\u001b[39mreceive_input(a)\n\u001b[1;32m---> 13\u001b[0m     a \u001b[39m=\u001b[39m layer\u001b[39m.\u001b[39;49moutput()\n\u001b[0;32m     14\u001b[0m \u001b[39mreturn\u001b[39;00m a\n",
-      "Cell \u001b[1;32mIn[88], line 21\u001b[0m, in \u001b[0;36mDenseLayer.output\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39moutput\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[0;32m     20\u001b[0m     \u001b[39mif\u001b[39;00m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mactivation \u001b[39m==\u001b[39m \u001b[39mNone\u001b[39;00m): \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39ma_in\u001b[39m@self\u001b[39m\u001b[39m.\u001b[39mw \u001b[39m+\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mb\n\u001b[1;32m---> 21\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mactivation(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49ma_in\u001b[39m@self\u001b[39;49m\u001b[39m.\u001b[39;49mw \u001b[39m+\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mb)\n",
-      "\u001b[1;31mValueError\u001b[0m: matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 2 is different from 784)"
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[143], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m neural_network\u001b[39m.\u001b[39;49mtrain(train_data, train_labels, learning_rate\u001b[39m=\u001b[39;49m\u001b[39m0.01\u001b[39;49m, epochs\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m)\n",
+      "Cell \u001b[1;32mIn[139], line 44\u001b[0m, in \u001b[0;36mNeuralNetwork.train\u001b[1;34m(self, X, y_true, learning_rate, epochs)\u001b[0m\n\u001b[0;32m     42\u001b[0m y_pred \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mforward_propagation(X)\n\u001b[0;32m     43\u001b[0m loss \u001b[39m=\u001b[39m LossFunctions\u001b[39m.\u001b[39msoftmax_cross_entropy(y_true, y_pred)\n\u001b[1;32m---> 44\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mbackward_propagation(X, y_true, learning_rate)\n\u001b[0;32m     45\u001b[0m \u001b[39mif\u001b[39;00m epoch \u001b[39m%\u001b[39m \u001b[39m100\u001b[39m \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[0;32m     46\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mEpoch \u001b[39m\u001b[39m{\u001b[39;00mepoch\u001b[39m}\u001b[39;00m\u001b[39m: Loss = \u001b[39m\u001b[39m{\u001b[39;00mloss\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[139], line 29\u001b[0m, in \u001b[0;36mNeuralNetwork.backward_propagation\u001b[1;34m(self, X, y_true, learning_rate)\u001b[0m\n\u001b[0;32m     27\u001b[0m     dZ \u001b[39m=\u001b[39m dA\n\u001b[0;32m     28\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m---> 29\u001b[0m     dZ \u001b[39m=\u001b[39m dA \u001b[39m*\u001b[39;49m layer\u001b[39m.\u001b[39;49mactivation(a)\n\u001b[0;32m     31\u001b[0m dW \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m \u001b[39m/\u001b[39m m \u001b[39m*\u001b[39m a_prev\u001b[39m.\u001b[39mT \u001b[39m@\u001b[39m dZ\n\u001b[0;32m     32\u001b[0m db \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m \u001b[39m/\u001b[39m m \u001b[39m*\u001b[39m np\u001b[39m.\u001b[39msum(dZ, axis\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for *: 'NoneType' and 'float'"
      ]
     }
    ],
