--- a/scratch-nn.ipynb
+++ b/scratch-nn.ipynb
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,17 +491,18 @@
     "    def softmax_cross_entropy(y_true, y_pred):\n",
     "        y_true_one_hot = np.zeros_like(y_pred)\n",
     "        y_true_one_hot[np.arange(len(y_true)), y_true] = 1\n",
-    "\n",
+    "        y_true_one_hot = y_true_one_hot.reshape(y_pred.shape)\n",
+    "        \n",
     "        epsilon = 1e-15\n",
     "        y_pred = np.clip(y_pred, epsilon, 1 - epsilon)\n",
-    "        \n",
+    "            \n",
     "        ce = -np.sum(y_true_one_hot * np.log(y_pred), axis=1)\n",
     "        return ce\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,29 +521,40 @@
     "            a = layer.output(a)\n",
     "        return a\n",
     "    \n",
+    "    \n",
     "    def backward_propagation(self, X, y_true, learning_rate):\n",
     "        m = X.shape[0]\n",
-    "        a = X\n",
-    "        for layer in self.layers:\n",
-    "            a_prev = a\n",
-    "            a = layer.output(a_prev)\n",
+    "        A = [X] + [None] * len(self.layers)\n",
+    "        Z = [None] * len(self.layers)\n",
+    "        dA = LossFunctions.softmax_cross_entropy(y_true, A[-1])\n",
     "        \n",
-    "        dA = LossFunctions.softmax_cross_entropy(y_true, a) # Gradient of the cost with respect to the activation of the last layer\n",
     "        for i in reversed(range(len(self.layers))):\n",
     "            layer = self.layers[i]\n",
-    "            if layer.activation is None:\n",
-    "                dZ = dA\n",
+    "            Z[i] = layer.linear_forward(A[i])\n",
+    "            if layer.activation is not None:\n",
+    "                A[i] = layer.activation(Z[i])\n",
     "            else:\n",
-    "                dZ = dA * layer.activation(a)\n",
+    "                A[i] = Z[i]\n",
+    "        \n",
+    "        dZ = dA\n",
+    "        grads = {}\n",
+    "        \n",
+    "        for i in reversed(range(len(self.layers))):\n",
+    "            layer = self.layers[i]\n",
+    "            A_prev = A[i-1] if i > 0 else X\n",
+    "            dW = 1 / m * np.dot(A_prev.T, dZ)\n",
+    "            db = 1 / m * np.sum(dZ, axis=0, keepdims=True)\n",
+    "            dA_prev = np.dot(dZ, layer.w.T)\n",
     "            \n",
-    "            dW = 1 / m * a_prev.T @ dZ\n",
-    "            db = 1 / m * np.sum(dZ, axis=0)\n",
-    "            dA_prev = dZ @ layer.w.T\n",
+    "            grads[f'dW{i+1}'] = dW\n",
+    "            grads[f'db{i+1}'] = db\n",
     "            \n",
-    "            layer.w -= learning_rate * dW\n",
-    "            layer.b -= learning_rate * db\n",
-    "            \n",
-    "            dA = dA_prev\n",
+    "            dZ = dA_prev * layer.activation_prime(Z[i]) if layer.activation is not None else dA_prev\n",
+    "        \n",
+    "        for i in range(len(self.layers)):\n",
+    "            layer = self.layers[i]\n",
+    "            layer.w -= learning_rate * grads[f'dW{i+1}']\n",
+    "            layer.b -= learning_rate * grads[f'db{i+1}']\n",
     "    \n",
     "    def train(self, X, y_true, learning_rate, epochs):\n",
     "        for epoch in range(epochs):\n",
@@ -555,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,30 +586,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
     "neural_network.add_layer(units=64, a_in=(None, 784), activation=relu)\n",
-    "neural_network.add_layer(units=10, a_in=(None, 64), activation=softmax)"
+    "neural_network.add_layer(units=10, a_in=(None, 64), activation=relu)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for *: 'NoneType' and 'float'",
+     "ename": "ValueError",
+     "evalue": "matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 784 is different from 10)",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[143], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m neural_network\u001b[39m.\u001b[39;49mtrain(train_data, train_labels, learning_rate\u001b[39m=\u001b[39;49m\u001b[39m0.01\u001b[39;49m, epochs\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m)\n",
-      "Cell \u001b[1;32mIn[139], line 44\u001b[0m, in \u001b[0;36mNeuralNetwork.train\u001b[1;34m(self, X, y_true, learning_rate, epochs)\u001b[0m\n\u001b[0;32m     42\u001b[0m y_pred \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mforward_propagation(X)\n\u001b[0;32m     43\u001b[0m loss \u001b[39m=\u001b[39m LossFunctions\u001b[39m.\u001b[39msoftmax_cross_entropy(y_true, y_pred)\n\u001b[1;32m---> 44\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mbackward_propagation(X, y_true, learning_rate)\n\u001b[0;32m     45\u001b[0m \u001b[39mif\u001b[39;00m epoch \u001b[39m%\u001b[39m \u001b[39m100\u001b[39m \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[0;32m     46\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mEpoch \u001b[39m\u001b[39m{\u001b[39;00mepoch\u001b[39m}\u001b[39;00m\u001b[39m: Loss = \u001b[39m\u001b[39m{\u001b[39;00mloss\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
-      "Cell \u001b[1;32mIn[139], line 29\u001b[0m, in \u001b[0;36mNeuralNetwork.backward_propagation\u001b[1;34m(self, X, y_true, learning_rate)\u001b[0m\n\u001b[0;32m     27\u001b[0m     dZ \u001b[39m=\u001b[39m dA\n\u001b[0;32m     28\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m---> 29\u001b[0m     dZ \u001b[39m=\u001b[39m dA \u001b[39m*\u001b[39;49m layer\u001b[39m.\u001b[39;49mactivation(a)\n\u001b[0;32m     31\u001b[0m dW \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m \u001b[39m/\u001b[39m m \u001b[39m*\u001b[39m a_prev\u001b[39m.\u001b[39mT \u001b[39m@\u001b[39m dZ\n\u001b[0;32m     32\u001b[0m db \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m \u001b[39m/\u001b[39m m \u001b[39m*\u001b[39m np\u001b[39m.\u001b[39msum(dZ, axis\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for *: 'NoneType' and 'float'"
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[164], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m neural_network\u001b[39m.\u001b[39;49mtrain(train_data, train_labels, learning_rate\u001b[39m=\u001b[39;49m\u001b[39m0.01\u001b[39;49m, epochs\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m)\n",
+      "Cell \u001b[1;32mIn[158], line 53\u001b[0m, in \u001b[0;36mNeuralNetwork.train\u001b[1;34m(self, X, y_true, learning_rate, epochs)\u001b[0m\n\u001b[0;32m     51\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mtrain\u001b[39m(\u001b[39mself\u001b[39m, X, y_true, learning_rate, epochs):\n\u001b[0;32m     52\u001b[0m     \u001b[39mfor\u001b[39;00m epoch \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(epochs):\n\u001b[1;32m---> 53\u001b[0m         y_pred \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mforward_propagation(X)\n\u001b[0;32m     54\u001b[0m         loss \u001b[39m=\u001b[39m LossFunctions\u001b[39m.\u001b[39msoftmax_cross_entropy(y_true, y_pred)\n\u001b[0;32m     55\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbackward_propagation(X, y_true, learning_rate)\n",
+      "Cell \u001b[1;32mIn[158], line 13\u001b[0m, in \u001b[0;36mNeuralNetwork.forward_propagation\u001b[1;34m(self, X)\u001b[0m\n\u001b[0;32m     10\u001b[0m a \u001b[39m=\u001b[39m X\n\u001b[0;32m     11\u001b[0m \u001b[39mfor\u001b[39;00m layer \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlayers:\n\u001b[0;32m     12\u001b[0m     \u001b[39m# layer.receive_input(a)\u001b[39;00m\n\u001b[1;32m---> 13\u001b[0m     a \u001b[39m=\u001b[39m layer\u001b[39m.\u001b[39;49moutput(a)\n\u001b[0;32m     14\u001b[0m \u001b[39mreturn\u001b[39;00m a\n",
+      "Cell \u001b[1;32mIn[103], line 19\u001b[0m, in \u001b[0;36mDenseLayer.output\u001b[1;34m(self, a_in)\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39moutput\u001b[39m(\u001b[39mself\u001b[39m, a_in):\n\u001b[0;32m     18\u001b[0m     \u001b[39mif\u001b[39;00m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mactivation \u001b[39m==\u001b[39m \u001b[39mNone\u001b[39;00m): \u001b[39mreturn\u001b[39;00m a_in\u001b[39m@self\u001b[39m\u001b[39m.\u001b[39mw \u001b[39m+\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mb\n\u001b[1;32m---> 19\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mactivation(a_in\u001b[39m@self\u001b[39;49m\u001b[39m.\u001b[39;49mw \u001b[39m+\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mb)\n",
+      "\u001b[1;31mValueError\u001b[0m: matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 784 is different from 10)"
      ]
     }
    ],
