--- a/scratch-nn.ipynb
+++ b/scratch-nn.ipynb
@@ -365,13 +365,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Activation:\n",
     "    def softmax(self, z):\n",
-    "        temp = np.sum(np.exp(z)) \n",
+    "        temp = np.sum(np.exp(z), axis=1, keepdims=True) \n",
     "        return np.exp(z) / temp\n",
     "    \n",
     "    def relu(self, z):\n",
@@ -384,41 +384,31 @@
     "        return 1/(1 + np.exp(-z))\n",
     "    \n",
     "    def use(self, string):\n",
-    "        match string:\n",
-    "            case 'relu':\n",
-    "                return self.relu\n",
-    "            case 'sigmoid':\n",
-    "                return self.sigmoid\n",
-    "            case 'softmax':\n",
-    "                return self.softmax\n",
-    "            case 'tanh':\n",
-    "                return self.tanh\n",
-    "            case default:\n",
-    "                return 'Please specify the activation'\n",
-    "    "
+    "        if string == 'relu':\n",
+    "            return self.relu\n",
+    "        elif string == 'sigmoid':\n",
+    "            return self.sigmoid\n",
+    "        elif string == 'softmax':\n",
+    "            return self.softmax\n",
+    "        elif string == 'tanh':\n",
+    "            return self.tanh\n",
+    "        else:\n",
+    "            return 'Please specify the activation'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 185,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.00490169 0.26762315 0.72747516]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "activation = Activation().use('softmax')\n",
-    "print(activation(np.array([-1,3,4])))"
+    "# activation = Activation().use('softmax')\n",
+    "# print(activation(np.array([-1,3,4])))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +429,7 @@
     "        '''\n",
     "\n",
     "    def output(self, a_in):\n",
-    "        if(self.activation == None): return a_in@self.w + self.b\n",
+    "        # if(self.activation == None): return a_in@self.w + self.b\n",
     "        return self.activation(a_in@self.w + self.b)\n",
     "\n",
     "        "
@@ -447,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +450,7 @@
       "        weight has shape(w.shape): (2, 2)\n",
       "        bias has shape(b.shape): (2,)\n",
       "        \n",
-      "[0.5 0.5]\n"
+      "[1.00000000e+00 3.34279552e-80]\n"
      ]
     }
    ],
@@ -473,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,128 +479,137 @@
     "        return - (y_true * np.log(y_pred) + (1 - y_true) * np.log(1 - y_pred))\n",
     "    \n",
     "    def softmax_cross_entropy(y_true, y_pred):\n",
-    "        y_true_one_hot = np.zeros_like(y_pred)\n",
-    "        y_true_one_hot[np.arange(len(y_true)), y_true] = 1\n",
-    "        y_true_one_hot = y_true_one_hot.reshape(y_pred.shape)\n",
-    "        \n",
     "        epsilon = 1e-15\n",
     "        y_pred = np.clip(y_pred, epsilon, 1 - epsilon)\n",
     "            \n",
-    "        ce = -np.sum(y_true_one_hot * np.log(y_pred), axis=1)\n",
-    "        return ce\n"
+    "        ce = -np.sum(y_true * np.log(y_pred), axis=1)\n",
+    "        return ce"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
     "class NeuralNetwork:\n",
+    "    def __init__(self, input_size, hidden_size, output_size, activation='sigmoid'):\n",
+    "        self.input_size = input_size\n",
+    "        self.hidden_size = hidden_size\n",
+    "        self.output_size = output_size\n",
+    "        self.activation = Activation().use(activation)\n",
+    "        \n",
+    "        # Initialize the weights and biases\n",
+    "        self.weights1 = np.random.randn(self.input_size, self.hidden_size)\n",
+    "        self.biases1 = np.zeros((1, self.hidden_size))\n",
+    "        self.weights2 = np.random.randn(self.hidden_size, self.output_size)\n",
+    "        self.biases2 = np.zeros((1, self.output_size))\n",
+    "        \n",
+    "    def forward(self, X):\n",
+    "        # Forward propagation\n",
+    "        self.hidden_layer = self.activation(np.dot(X, self.weights1) + self.biases1)\n",
+    "        self.output_layer = self.activation(np.dot(self.hidden_layer, self.weights2) + self.biases2)\n",
+    "        return self.output_layer\n",
+    "    \n",
+    "    def backward(self, X, y, learning_rate):\n",
+    "        # Backward propagation\n",
+    "        error = self.loss_derivative(y, self.output_layer)\n",
+    "        d_output_layer = error * self.activation(self.output_layer, derivative=True)\n",
+    "        error_hidden_layer = d_output_layer.dot(self.weights2.T)\n",
+    "        d_hidden_layer = error_hidden_layer * self.activation(self.hidden_layer, derivative=True)\n",
+    "        \n",
+    "        # Update the weights and biases\n",
+    "        self.weights2 -= learning_rate * self.hidden_layer.T.dot(d_output_layer)\n",
+    "        self.biases2 -= learning_rate * np.sum(d_output_layer, axis=0, keepdims=True)\n",
+    "        self.weights1 -= learning_rate * X.T.dot(d_hidden_layer)\n",
+    "        self.biases1 -= learning_rate * np.sum(d_hidden_layer, axis=0)\n",
+    "        \n",
+    "    def train(self, X, y, epochs, learning_rate):\n",
+    "        # Train the model\n",
+    "        for i in range(epochs):\n",
+    "            output = self.forward(X)\n",
+    "            loss = LossFunctions.softmax_cross_entropy(y, output)\n",
+    "            self.backward(X, y, learning_rate)\n",
+    "            if i % 10 == 0:\n",
+    "                print(\"Epoch \", i, \" loss: \", np.mean(loss))\n",
+    "                \n",
+    "    def predict(self, X):\n",
+    "        # Make predictions\n",
+    "        output = self.forward(X)\n",
+    "        predictions = np.argmax(output, axis=1)\n",
+    "        return predictions\n",
     "\n",
-    "    def __init__(self):\n",
-    "        self.layers = []\n",
-    "\n",
-    "    def add_layer(self, units, a_in, activation=None):\n",
-    "        self.layers.append(DenseLayer(units, a_in, activation))\n",
-    "    \n",
-    "    def forward_propagation(self, X):\n",
-    "        a = X\n",
-    "        for layer in self.layers:\n",
-    "            # layer.receive_input(a)\n",
-    "            a = layer.output(a)\n",
-    "        return a\n",
-    "    \n",
-    "    \n",
-    "    def backward_propagation(self, X, y_true, learning_rate):\n",
-    "        m = X.shape[0]\n",
-    "        A = [X] + [None] * len(self.layers)\n",
-    "        Z = [None] * len(self.layers)\n",
-    "        dA = LossFunctions.softmax_cross_entropy(y_true, A[-1])\n",
-    "        \n",
-    "        for i in reversed(range(len(self.layers))):\n",
-    "            layer = self.layers[i]\n",
-    "            Z[i] = layer.linear_forward(A[i])\n",
-    "            if layer.activation is not None:\n",
-    "                A[i] = layer.activation(Z[i])\n",
-    "            else:\n",
-    "                A[i] = Z[i]\n",
-    "        \n",
-    "        dZ = dA\n",
-    "        grads = {}\n",
-    "        \n",
-    "        for i in reversed(range(len(self.layers))):\n",
-    "            layer = self.layers[i]\n",
-    "            A_prev = A[i-1] if i > 0 else X\n",
-    "            dW = 1 / m * np.dot(A_prev.T, dZ)\n",
-    "            db = 1 / m * np.sum(dZ, axis=0, keepdims=True)\n",
-    "            dA_prev = np.dot(dZ, layer.w.T)\n",
-    "            \n",
-    "            grads[f'dW{i+1}'] = dW\n",
-    "            grads[f'db{i+1}'] = db\n",
-    "            \n",
-    "            dZ = dA_prev * layer.activation_prime(Z[i]) if layer.activation is not None else dA_prev\n",
-    "        \n",
-    "        for i in range(len(self.layers)):\n",
-    "            layer = self.layers[i]\n",
-    "            layer.w -= learning_rate * grads[f'dW{i+1}']\n",
-    "            layer.b -= learning_rate * grads[f'db{i+1}']\n",
-    "    \n",
-    "    def train(self, X, y_true, learning_rate, epochs):\n",
-    "        for epoch in range(epochs):\n",
-    "            y_pred = self.forward_propagation(X)\n",
-    "            loss = LossFunctions.softmax_cross_entropy(y_true, y_pred)\n",
-    "            self.backward_propagation(X, y_true, learning_rate)\n",
-    "            if epoch % 100 == 0:\n",
-    "                print(f\"Epoch {epoch}: Loss = {loss}\")"
+    "    def loss_derivative(self, y_true, y_pred):\n",
+    "        return y_pred - y_true"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
-    "neural_network = NeuralNetwork()"
+    "y_train_one_hot = np.zeros((train_labels.shape[0], 10))\n",
+    "y_train_one_hot[np.arange(train_labels.shape[0]), train_labels] = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "softmax = Activation().use('softmax')\n",
-    "relu = Activation().use('relu')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 163,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "neural_network.add_layer(units=64, a_in=(None, 784), activation=relu)\n",
-    "neural_network.add_layer(units=10, a_in=(None, 64), activation=relu)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 784 is different from 10)",
+     "data": {
+      "text/plain": [
+       "(60000, 10)"
+      ]
+     },
+     "execution_count": 197,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train_one_hot.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 0., 1., 0., 0., 0., 0.])"
+      ]
+     },
+     "execution_count": 199,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train_one_hot[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "too many indices for array: array is 0-dimensional, but 2 were indexed",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[164], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m neural_network\u001b[39m.\u001b[39;49mtrain(train_data, train_labels, learning_rate\u001b[39m=\u001b[39;49m\u001b[39m0.01\u001b[39;49m, epochs\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m)\n",
-      "Cell \u001b[1;32mIn[158], line 53\u001b[0m, in \u001b[0;36mNeuralNetwork.train\u001b[1;34m(self, X, y_true, learning_rate, epochs)\u001b[0m\n\u001b[0;32m     51\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mtrain\u001b[39m(\u001b[39mself\u001b[39m, X, y_true, learning_rate, epochs):\n\u001b[0;32m     52\u001b[0m     \u001b[39mfor\u001b[39;00m epoch \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(epochs):\n\u001b[1;32m---> 53\u001b[0m         y_pred \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mforward_propagation(X)\n\u001b[0;32m     54\u001b[0m         loss \u001b[39m=\u001b[39m LossFunctions\u001b[39m.\u001b[39msoftmax_cross_entropy(y_true, y_pred)\n\u001b[0;32m     55\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbackward_propagation(X, y_true, learning_rate)\n",
-      "Cell \u001b[1;32mIn[158], line 13\u001b[0m, in \u001b[0;36mNeuralNetwork.forward_propagation\u001b[1;34m(self, X)\u001b[0m\n\u001b[0;32m     10\u001b[0m a \u001b[39m=\u001b[39m X\n\u001b[0;32m     11\u001b[0m \u001b[39mfor\u001b[39;00m layer \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlayers:\n\u001b[0;32m     12\u001b[0m     \u001b[39m# layer.receive_input(a)\u001b[39;00m\n\u001b[1;32m---> 13\u001b[0m     a \u001b[39m=\u001b[39m layer\u001b[39m.\u001b[39;49moutput(a)\n\u001b[0;32m     14\u001b[0m \u001b[39mreturn\u001b[39;00m a\n",
-      "Cell \u001b[1;32mIn[103], line 19\u001b[0m, in \u001b[0;36mDenseLayer.output\u001b[1;34m(self, a_in)\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39moutput\u001b[39m(\u001b[39mself\u001b[39m, a_in):\n\u001b[0;32m     18\u001b[0m     \u001b[39mif\u001b[39;00m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mactivation \u001b[39m==\u001b[39m \u001b[39mNone\u001b[39;00m): \u001b[39mreturn\u001b[39;00m a_in\u001b[39m@self\u001b[39m\u001b[39m.\u001b[39mw \u001b[39m+\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mb\n\u001b[1;32m---> 19\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mactivation(a_in\u001b[39m@self\u001b[39;49m\u001b[39m.\u001b[39;49mw \u001b[39m+\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mb)\n",
-      "\u001b[1;31mValueError\u001b[0m: matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 784 is different from 10)"
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[181], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m neural_network\u001b[39m.\u001b[39;49mtrain(train_data, train_labels, learning_rate\u001b[39m=\u001b[39;49m\u001b[39m0.01\u001b[39;49m, epochs\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m)\n",
+      "Cell \u001b[1;32mIn[177], line 55\u001b[0m, in \u001b[0;36mNeuralNetwork.train\u001b[1;34m(self, X, y_true, learning_rate, epochs)\u001b[0m\n\u001b[0;32m     53\u001b[0m y_pred \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mforward_propagation(X)\n\u001b[0;32m     54\u001b[0m loss \u001b[39m=\u001b[39m LossFunctions\u001b[39m.\u001b[39msoftmax_cross_entropy(y_true, y_pred)\n\u001b[1;32m---> 55\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mbackward_propagation(X, y_true, learning_rate)\n\u001b[0;32m     56\u001b[0m \u001b[39mif\u001b[39;00m epoch \u001b[39m%\u001b[39m \u001b[39m100\u001b[39m \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[0;32m     57\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mEpoch \u001b[39m\u001b[39m{\u001b[39;00mepoch\u001b[39m}\u001b[39;00m\u001b[39m: Loss = \u001b[39m\u001b[39m{\u001b[39;00mloss\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[177], line 21\u001b[0m, in \u001b[0;36mNeuralNetwork.backward_propagation\u001b[1;34m(self, X, y_true, learning_rate)\u001b[0m\n\u001b[0;32m     19\u001b[0m A \u001b[39m=\u001b[39m [X] \u001b[39m+\u001b[39m [\u001b[39mNone\u001b[39;00m] \u001b[39m*\u001b[39m \u001b[39mlen\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlayers)\n\u001b[0;32m     20\u001b[0m Z \u001b[39m=\u001b[39m [\u001b[39mNone\u001b[39;00m] \u001b[39m*\u001b[39m \u001b[39mlen\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlayers)\n\u001b[1;32m---> 21\u001b[0m dA \u001b[39m=\u001b[39m LossFunctions\u001b[39m.\u001b[39;49msoftmax_cross_entropy(y_true, A[\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m])\n\u001b[0;32m     23\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mreversed\u001b[39m(\u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlayers))):\n\u001b[0;32m     24\u001b[0m     layer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlayers[i]\n",
+      "Cell \u001b[1;32mIn[176], line 14\u001b[0m, in \u001b[0;36mLossFunctions.softmax_cross_entropy\u001b[1;34m(y_true, y_pred)\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39msoftmax_cross_entropy\u001b[39m(y_true, y_pred):\n\u001b[0;32m     13\u001b[0m     y_true_one_hot \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mzeros_like(y_pred)\n\u001b[1;32m---> 14\u001b[0m     y_true_one_hot[np\u001b[39m.\u001b[39;49marange(\u001b[39mlen\u001b[39;49m(y_true)), y_true] \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m     15\u001b[0m     y_true_one_hot \u001b[39m=\u001b[39m y_true_one_hot\u001b[39m.\u001b[39mreshape(y_pred\u001b[39m.\u001b[39mshape)\n\u001b[0;32m     17\u001b[0m     epsilon \u001b[39m=\u001b[39m \u001b[39m1e-15\u001b[39m\n",
+      "\u001b[1;31mIndexError\u001b[0m: too many indices for array: array is 0-dimensional, but 2 were indexed"
      ]
     }
    ],
