--- a/scratch-nn.ipynb
+++ b/scratch-nn.ipynb
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,16 +488,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [],
    "source": [
     "class NeuralNetwork:\n",
-    "    def __init__(self, input_size, hidden_size, output_size, activation='sigmoid'):\n",
+    "    def __init__(self, input_size, hidden_size, output_size, activation):\n",
     "        self.input_size = input_size\n",
     "        self.hidden_size = hidden_size\n",
     "        self.output_size = output_size\n",
-    "        self.activation = Activation().use(activation)\n",
+    "        self.activation = [Activation().use(activation[0]), Activation().use(activation[1])]\n",
     "        \n",
     "        # Initialize the weights and biases\n",
     "        self.weights1 = np.random.randn(self.input_size, self.hidden_size)\n",
@@ -507,16 +507,16 @@
     "        \n",
     "    def forward(self, X):\n",
     "        # Forward propagation\n",
-    "        self.hidden_layer = self.activation(np.dot(X, self.weights1) + self.biases1)\n",
-    "        self.output_layer = self.activation(np.dot(self.hidden_layer, self.weights2) + self.biases2)\n",
+    "        self.hidden_layer = self.activation[0](np.dot(X, self.weights1) + self.biases1)\n",
+    "        self.output_layer = self.activation[1](np.dot(self.hidden_layer, self.weights2) + self.biases2)\n",
     "        return self.output_layer\n",
     "    \n",
     "    def backward(self, X, y, learning_rate):\n",
     "        # Backward propagation\n",
     "        error = self.loss_derivative(y, self.output_layer)\n",
-    "        d_output_layer = error * self.activation(self.output_layer,)\n",
+    "        d_output_layer = error * self.activation[1](self.output_layer,)\n",
     "        error_hidden_layer = d_output_layer.dot(self.weights2.T)\n",
-    "        d_hidden_layer = error_hidden_layer * self.activation(self.hidden_layer)\n",
+    "        d_hidden_layer = error_hidden_layer * self.activation[0](self.hidden_layer)\n",
     "        \n",
     "        # Update the weights and biases\n",
     "        self.weights2 -= learning_rate * self.hidden_layer.T.dot(d_output_layer)\n",
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +566,7 @@
        "(60000, 10)"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 270,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
        "array([0., 0., 0., 0., 0., 1., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 271,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,33 +597,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = NeuralNetwork(input_size=784, hidden_size=128, output_size=10, activation='relu')"
+    "model = NeuralNetwork(input_size=784, hidden_size=128, output_size=10, activation=['relu', 'softmax'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch  0  loss:  34.53877639491066\n"
+      "Epoch  0  loss:  31.00948909362405\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\hp\\AppData\\Local\\Temp\\ipykernel_5180\\2414442622.py:3: RuntimeWarning: overflow encountered in exp\n",
+      "  temp = np.sum(np.exp(z), axis=1, keepdims=True)\n",
+      "C:\\Users\\hp\\AppData\\Local\\Temp\\ipykernel_5180\\2414442622.py:4: RuntimeWarning: overflow encountered in exp\n",
+      "  return np.exp(z) / temp\n",
+      "C:\\Users\\hp\\AppData\\Local\\Temp\\ipykernel_5180\\2414442622.py:4: RuntimeWarning: invalid value encountered in divide\n",
+      "  return np.exp(z) / temp\n"
      ]
     }
    ],
    "source": [
-    "model.train(X_train, y_train_one_hot, epochs=3, learning_rate=0.01)"
+    "model.train(X_train, y_train_one_hot, epochs=2, learning_rate=0.01)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [
     {
