made changes to the backprop

--- a/scratch-nn.ipynb
+++ b/scratch-nn.ipynb
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 426,
+   "execution_count": 446,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 431,
+   "execution_count": 467,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,12 +510,11 @@
     "    def backward(self, X, y, learning_rate):\n",
     "        error = self.loss_derivative(y, self.output_layer)\n",
     "        d_output_layer = error * self.activation[1](self.output_layer)\n",
-    "        error_hidden_layer = d_output_layer.dot(self.weights2.T)\n",
-    "        d_hidden_layer = error_hidden_layer * self.activation[0](self.hidden_layer)\n",
-    "        \n",
-    "        self.weights2 -= learning_rate * self.hidden_layer.T.dot(d_output_layer)\n",
+    "        d_hidden_layer = np.dot(d_output_layer, self.weights2.T) * self.activation[0](self.hidden_layer)\n",
+    "            \n",
+    "        self.weights2 -= learning_rate * np.dot(self.hidden_layer.T, d_output_layer)\n",
     "        self.biases2 -= learning_rate * np.sum(d_output_layer, axis=0, keepdims=True)\n",
-    "        self.weights1 -= learning_rate * X.T.dot(d_hidden_layer)\n",
+    "        self.weights1 -= learning_rate * np.dot(X.T, d_hidden_layer)\n",
     "        self.biases1 -= learning_rate * np.sum(d_hidden_layer, axis=0)\n",
     "        \n",
     "    def train(self, X, y, epochs, learning_rate):\n",
@@ -537,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 432,
+   "execution_count": 468,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 433,
+   "execution_count": 469,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +557,7 @@
        "(60000, 10)"
       ]
      },
-     "execution_count": 433,
+     "execution_count": 469,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 434,
+   "execution_count": 470,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +577,7 @@
        "array([0., 0., 0., 0., 0., 1., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 434,
+     "execution_count": 470,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 435,
+   "execution_count": 509,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,24 +597,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 436,
+   "execution_count": 510,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch  0  loss:  11.002213327545226\n"
+      "Epoch  0  loss:  11.001907475537129\n"
      ]
     }
    ],
    "source": [
-    "model.train(X_train, y_train_one_hot, epochs=10, learning_rate=1)"
+    "model.train(X_train, y_train_one_hot, epochs=2, learning_rate=0.07)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 404,
+   "execution_count": 511,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,14 +623,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 512,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy:  0.0625\n"
+      "Accuracy:  0.1765\n"
      ]
     }
    ],
@@ -642,39 +641,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 430,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 430,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 429,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7"
-      ]
-     },
-     "execution_count": 429,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    " highest -> 17.65%"
+   ]
   },
   {
    "cell_type": "code",
