made changes to the backprop

--- a/scratch-nn.ipynb
+++ b/scratch-nn.ipynb
@@ -365,13 +365,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 851,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Activation:\n",
     "    def softmax(self, z):\n",
     "        return 1/sum(np.exp(z)) * np.exp(z)\n",
+    "\n",
+    "    def stablesoftmax(x):\n",
+    "        \"\"\"Compute the softmax of vector x in a numerically stable way.\"\"\"\n",
+    "        shiftx = x - np.max(x)\n",
+    "        exps = np.exp(shiftx)\n",
+    "        return exps / np.sum(exps)\n",
     "    \n",
     "    def relu(self, z):\n",
     "        return np.maximum(0, z)\n",
@@ -383,16 +389,17 @@
     "        return 1/(1 + np.exp(-z))\n",
     "    \n",
     "    def use(self, string):\n",
-    "        if string == 'relu':\n",
+    "       match string:\n",
+    "        case 'relu':\n",
     "            return self.relu\n",
-    "        elif string == 'sigmoid':\n",
+    "        case 'sigmoid':\n",
     "            return self.sigmoid\n",
-    "        elif string == 'softmax':\n",
+    "        case 'softmax':\n",
     "            return self.softmax\n",
-    "        elif string == 'tanh':\n",
+    "        case 'tanh':\n",
     "            return self.tanh\n",
-    "        else:\n",
-    "            return 'Please specify the activation'"
+    "        case 'stablesoftmax':\n",
+    "            return self.stablesoftmax"
    ]
   },
   {
@@ -462,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 446,
+   "execution_count": 852,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,12 +488,13 @@
     "        epsilon = 1e-15\n",
     "        # y_pred = np.clip(y_pred, epsilon, 1 - epsilon)\n",
     "        ce = -np.sum(y_true * np.log(y_pred), axis=1)\n",
-    "        return ce"
+    "        return ce\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 467,
+   "execution_count": 853,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,9 +505,11 @@
     "        self.output_size = output_size\n",
     "        self.activation = [Activation().use(activation[0]), Activation().use(activation[1])]\n",
     "        \n",
-    "        self.weights1 = np.random.randn(self.input_size, self.hidden_size)\n",
+    "        np.random.seed(3)\n",
+    "        \n",
+    "        self.weights1 = 0.01 * np.random.randn(self.input_size, self.hidden_size)\n",
     "        self.biases1 = np.zeros((1, self.hidden_size))\n",
-    "        self.weights2 = np.random.randn(self.hidden_size, self.output_size)\n",
+    "        self.weights2 = 0.01 * np.random.randn(self.hidden_size, self.output_size)\n",
     "        self.biases2 = np.zeros((1, self.output_size))\n",
     "        \n",
     "    def forward(self, X):\n",
@@ -507,21 +517,18 @@
     "        self.output_layer = self.activation[1](np.dot(self.hidden_layer, self.weights2) + self.biases2)\n",
     "        return self.output_layer\n",
     "    \n",
-    "    def backward(self, X, y, learning_rate):\n",
-    "        error = self.loss_derivative(y, self.output_layer)\n",
-    "        d_output_layer = error * self.activation[1](self.output_layer)\n",
-    "        d_hidden_layer = np.dot(d_output_layer, self.weights2.T) * self.activation[0](self.hidden_layer)\n",
+    "    def backward(self, X, y, learning_rate, loss):\n",
     "            \n",
-    "        self.weights2 -= learning_rate * np.dot(self.hidden_layer.T, d_output_layer)\n",
-    "        self.biases2 -= learning_rate * np.sum(d_output_layer, axis=0, keepdims=True)\n",
-    "        self.weights1 -= learning_rate * np.dot(X.T, d_hidden_layer)\n",
-    "        self.biases1 -= learning_rate * np.sum(d_hidden_layer, axis=0)\n",
+    "        self.weights2 -= learning_rate * \n",
+    "        self.biases2 -= learning_rate * \n",
+    "        self.weights1 -= learning_rate * \n",
+    "        self.biases1 -= learning_rate * \n",
     "        \n",
     "    def train(self, X, y, epochs, learning_rate):\n",
     "        for i in range(epochs):\n",
     "            output = self.forward(X)\n",
     "            loss = LossFunctions.softmax_cross_entropy(y, output)\n",
-    "            self.backward(X, y, learning_rate)\n",
+    "            self.backward(X, y, learning_rate, loss)\n",
     "            if i % 10 == 0:\n",
     "                print(\"Epoch \", i, \" loss: \", np.mean(loss))\n",
     "                \n",
@@ -536,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 468,
+   "execution_count": 807,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 469,
+   "execution_count": 808,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +564,7 @@
        "(60000, 10)"
       ]
      },
-     "execution_count": 469,
+     "execution_count": 808,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 470,
+   "execution_count": 809,
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +584,7 @@
        "array([0., 0., 0., 0., 0., 1., 0., 0., 0., 0.])"
       ]
      },
-     "execution_count": 470,
+     "execution_count": 809,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 509,
+   "execution_count": 854,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,24 +604,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 510,
+   "execution_count": 855,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch  0  loss:  11.001907475537129\n"
+      "Epoch  0  loss:  11.002100641975726\n"
      ]
     }
    ],
    "source": [
-    "model.train(X_train, y_train_one_hot, epochs=2, learning_rate=0.07)"
+    "model.train(train_data, y_train_one_hot, epochs=1, learning_rate=0.08)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 511,
+   "execution_count": 856,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,14 +630,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 512,
+   "execution_count": 857,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy:  0.1765\n"
+      "Accuracy:  0.098\n"
      ]
     }
    ],
@@ -641,19 +648,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 658,
    "metadata": {},
    "outputs": [],
    "source": [
-    " highest -> 17.65%"
+    "#  highest -> 17.65%"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 778,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# model.output_layer.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 850,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 850,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred[2000]"
+   ]
   },
   {
    "cell_type": "code",
